objects/CMN_LoginFrequency__c.object
<CustomObject>
    <description>This object is created to persist the login frequency of users.</description>
    <fields>
        <fullName>CMN_LoginMonth__c</fullName>
        <description>Captures the login month of the user.</description>
        <label>Login Month</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMN_LoginYear__c</fullName>
        <description>Captures the login year of the user.</description>
        <label>Login Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMN_RD_LoginDate__c</fullName>
        <description>Stores the login month and year of the user with login date as &apos;01&apos;. This date field is created so that we can use relative date filters on reports.</description>
        <formula>DATEVALUE(TEXT(CMN_LoginYear__c) &amp; &apos;-&apos; &amp; TEXT(CMN_LoginMonth__c) &amp; &apos;-&apos; &amp; &apos;01&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Login Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMN_TotalLoginCount__c</fullName>
        <description>Captures the count of  total logins of the user for a particular month of the year.</description>
        <label>Total Login Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMN_UniqueLoginCount__c</fullName>
        <description>Captures the count of unique logins i.e. number of distinct days the user logged in for a particular month of the year.</description>
        <label>Unique Login Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMN_UserIdWithLoginYearAndMonth__c</fullName>
        <description>Captures the concatenated string of userId with login month and login year.</description>
        <externalId>true</externalId>
        <label>User Id With Login Year And Month</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CMN_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is a lookup to User to which the login frequency record belongs to.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AW_LoginFrequencies</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Login Frequency</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CMN_User__c</columns>
        <columns>CMN_LoginYear__c</columns>
        <columns>CMN_LoginMonth__c</columns>
        <columns>CMN_UniqueLoginCount__c</columns>
        <columns>CMN_TotalLoginCount__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LF-{00000000}</displayFormat>
        <label>Frequency Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Login Frequencies</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>